# diffusion-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release-plz.toml  token.txt
.github/: dependabot.yml
.github/workflows/: release-plz.yml  release.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-flutter-ui-foundation-mock-mode/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-SKELETON.md  01-UAT.md  01-UI-SPEC.md
.planning/phases/02-rust-bridge-wiring/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UAT.md  02-UI-SPEC.md  02-VERIFICATION.md
.planning/quick/260623-nv0-update-gui-readme-with-build-instruction/: 260623-nv0-PLAN.md  260623-nv0-SUMMARY.md
.planning/quick/260623-o38-change-app-titlebar-title-to-diffusionrs/: 260623-o38-PLAN.md  260623-o38-SUMMARY.md
.planning/quick/260623-oer-fix-stale-preview-bug-clear-preview-at-g/: 260623-oer-PLAN.md  260623-oer-SUMMARY.md
.planning/quick/260623-omk-fix-stale-preview-force-clear-on-generat/: 260623-omk-SUMMARY.md
.planning/quick/260623-p1j-fix-save-button-disable-when-final-image/: 260623-p1j-SUMMARY.md
.planning/quick/260623-p67-fix-generate-button-keep-disabled-during/: 260623-p67-SUMMARY.md
.planning/quick/260624-eug-genera-una-icona-per-la-parte-gui-flutte/: 260624-eug-PLAN.md  260624-eug-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/: README.md  cli.rs
gui/: .gitignore  README.md  pubspec.yaml
gui/integration_test/: simple_test.dart
gui/lib/: app.dart  main.dart
gui/lib/features/generation/providers/: generation_provider.dart
gui/lib/features/generation/services/: generation_service.dart  mock_generation_service.dart  rust_generation_service.dart
gui/lib/features/output/: output_panel.dart
gui/lib/features/output/providers/: output_provider.dart
gui/lib/features/params/: params_panel.dart
gui/lib/features/params/providers/: params_provider.dart
gui/lib/features/params/sections/: advanced_section.dart  generation_section.dart  model_section.dart  postproc_section.dart
gui/lib/shared/models/: preset_catalog.dart  progress_event.dart
gui/lib/shared/services/: temp_directory_manager.dart
gui/lib/shared/theme/: theme_provider.dart
gui/lib/shared/widgets/: drag_handle.dart  error_dialog.dart  seed_field.dart
gui/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  gui_params.dart
gui/lib/src/rust/api/: api.dart
gui/linux/: CMakeLists.txt
gui/linux/flutter/: generated_plugins.cmake
gui/linux/runner/: my_application.cc
gui/macos/: .gitignore
gui/macos/Runner.xcodeproj/: project.pbxproj
gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
gui/macos/Runner/Configs/: AppInfo.xcconfig
gui/rust/: Cargo.toml
gui/rust/src/: api.rs  bridge.rs  frb_generated.rs  gui_params.rs  lib.rs
gui/rust_builder/: pubspec.yaml
gui/rust_builder/android/: build.gradle  settings.gradle
gui/rust_builder/android/src/main/: AndroidManifest.xml
gui/rust_builder/ios/: rust_lib_diffusion_rs_gui.podspec
gui/rust_builder/linux/: CMakeLists.txt
gui/rust_builder/macos/: rust_lib_diffusion_rs_gui.podspec
gui/rust_builder/windows/: CMakeLists.txt
gui/test/: widget_test.dart
gui/windows/: CMakeLists.txt
gui/windows/flutter/: generated_plugins.cmake
gui/windows/runner/: Runner.rc  main.cpp
src/: api.rs  api_modified.rs  lib.rs  model_config.rs  modifier.rs  old_api.rs  preset.rs  preset_builder.rs  raw.rs  txt2img_config.rs  types.rs  util.rs  utils.rs
sys/: CHANGELOG.md  Cargo.toml  build.rs  stb_image_write.c  wrapper.h
sys/src/: bindings.rs
tests/: integration_tests.rs
