[workspace]
members = ["sys"]

[workspace.package]
version = "0.1.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/newfla/diffusion-rs"
keywords = ["ai", "stable-diffusion", "flux"]

[package]
name = "diffusion-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "High level API for stable-diffusion.cpp"
documentation = "https://docs.rs/diffusion-rs"


[dependencies]
derive_builder = "0.20.2"
diffusion-rs-sys = { path = "sys", version = "0.1.7" }
hf-hub = {version = "0.4.0", default-features = false, features = ["ureq"]}
image = "0.25.5"
libc = "0.2.161"
num_cpus = "1.16.0"
thiserror = "2.0.3"

[features]
cuda = ["diffusion-rs-sys/cuda"]
hipblas = ["diffusion-rs-sys/hipblas"]
metal = ["diffusion-rs-sys/metal"]
vulkan = ["diffusion-rs-sys/vulkan"]
sycl = ["diffusion-rs-sys/sycl"]
flashattn = ["diffusion-rs-sys/flashattn"]
