[workspace]
members = ["sys", "cli"]

[workspace.package]
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
version = "0.1.15"
edition = "2024"
license = "MIT"
repository = "https://github.com/newfla/diffusion-rs"
keywords = ["ai", "stable-diffusion", "flux"]

[package]
name = "diffusion-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "High level API for stable-diffusion.cpp"
documentation = "https://docs.rs/diffusion-rs"


[dependencies]
chrono.workspace = true
derive_builder = "0.20.2"
diffusion-rs-sys = { path = "sys", version = "0.1.15" }
hf-hub = {version = "0.4.2", default-features = false, features = ["ureq"]}
image = "0.25.5"
libc = "0.2.161"
little_exif = "0.6.21"
num_cpus = "1.16.0"
strum.workspace = true
subenum = "1.1.3"
thiserror = "2.0.3"
walkdir = "2.5.0"

[workspace.dependencies]
chrono = "0.4.42"
clap = {version = "4.5.53", features = ["default","derive"]}
execution-time = "0.3.1"
strum = { version = "0.27", features = ["derive"] }

[features]
cuda = ["diffusion-rs-sys/cuda"]
hipblas = ["diffusion-rs-sys/hipblas"]
metal = ["diffusion-rs-sys/metal"]
vulkan = ["diffusion-rs-sys/vulkan"]
sycl = ["diffusion-rs-sys/sycl"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
