[package]
name = "diffusion-rs-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Rust bindings for stable-diffusion.cpp (FFI bindings)"
documentation = "https://docs.rs/diffusion-rs-sys"
links = "stable-diffusion"
include = [
    "stable-diffusion.cpp/",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
    "stb_image_write.c",
]

[dependencies]

[features]
cublas = []
hipblas = []
metal = []
vulkan = []
sycl = []
flashattn = []

[build-dependencies]
cc = "1.1.31"
cmake = "0.1.51"
bindgen = "0.70.1"
fs_extra = "1.3.0"
