[package]
name = "diffusion-rs-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Rust bindings for stable-diffusion.cpp (FFI bindings)"
documentation = "https://docs.rs/diffusion-rs-sys"
links = "stable-diffusion"
include = [
    "stable-diffusion.cpp/LICENSE",
    "stable-diffusion.cpp/CMakeLists.txt",
    "stable-diffusion.cpp/include/*.h",
    "stable-diffusion.cpp/src/*.inl",
    "stable-diffusion.cpp/src/*.h",
    "stable-diffusion.cpp/src/*.hpp",
    "stable-diffusion.cpp/src/*.cpp",
    "stable-diffusion.cpp/src/tokenizers/*.h",
    "stable-diffusion.cpp/src/tokenizers/*.hpp",
    "stable-diffusion.cpp/src/tokenizers/*.cpp",
    "stable-diffusion.cpp/src/tokenizers/vocab/*.h",
    "stable-diffusion.cpp/src/tokenizers/vocab/*.hpp",
    "stable-diffusion.cpp/src/tokenizers/vocab/*.cpp",
    "stable-diffusion.cpp/src/model_io/*.h",
    "stable-diffusion.cpp/src/model_io/*.hpp",
    "stable-diffusion.cpp/src/model_io/*.cpp",
    "stable-diffusion.cpp/thirdparty/**",
    "stable-diffusion.cpp/ggml/cmake/**",
    "stable-diffusion.cpp/ggml/src/*",
    "!stable-diffusion.cpp/ggml/src/ggml-kompute/",
    "stable-diffusion.cpp/ggml/include/**",
    "stable-diffusion.cpp/ggml/CMakeLists.txt",
    "stable-diffusion.cpp/ggml/LICENSE",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
    "stb_image_write.c",
]

[dependencies]

[features]
cuda = []
hipblas = []
metal = []
vulkan = []
sycl = []

[build-dependencies]
cmake = "0.1.51"
bindgen = "0.71.1"
fs_extra = "1.3.0"
